<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#035B75"
    android:orientation="vertical"
    tools:context=".CheckoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/premiumTitle"
        android:textAlignment="center"
        android:textColor="@color/app_color_light"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit1" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/premiumBenefit1"
            android:textColor="@color/app_color_light"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit2" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/premiumBenefit2"
            android:textColor="@color/app_color_light"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/benefit3" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/amaranth_regular"
            android:text="@string/premiumBenefit3"
            android:textColor="@color/app_color_light"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@color/previus_cell"
        android:text="@string/pay"
        android:textColor="@color/app_color_dark"
        android:textSize="16sp" />


</LinearLayout>